# aem-a2ui-demo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONCEPTS.md  PLAN.md  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agent/: Dockerfile  Dockerfile.dev  advanced_agent.py  middleware.py  pyproject.toml  simple_agent.py
agent-java/: Dockerfile  pom.xml
agent/tests/: test_advanced_agent.py  test_simple_agent.py
client/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  web-test-runner.config.mjs
client/.storybook/: main.ts  preview.d.ts  preview.d.ts.map  preview.ts  webpack.config.js
client/src/: aem-assistant.d.ts  aem-assistant.d.ts.map  aem-assistant.ts  spectrum-imports.ts
client/src/aue/: component-definitions.json  component-filters.json  component-models.json  index.ts  universal-editor.ts
client/storybook-static/: 13.7842b89f.iframe.bundle.js  13.7842b89f.iframe.bundle.js.map  364.50db80c3.iframe.bundle.js  648.0d6b3941.iframe.bundle.js  689.8ce197a9.iframe.bundle.js  689.8ce197a9.iframe.bundle.js.map  936.ee3f8b47.iframe.bundle.js  980.746cb5ab.iframe.bundle.js  components-assistant-header-stories.f22a8c7e.iframe.bundle.js  components-assistant-header-stories.f22a8c7e.iframe.bundle.js.map  iframe.html  index.html  index.json  main.bb7eea2a.iframe.bundle.js  project.json  runtime~main.f3207946.iframe.bundle.js
client/test/: setup.js
docs/: A2UI_STORY.md  PROTOCOL.md  VALUE_PROPOSITION.md
(+114 files in other folders)
